--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <section class="container">
-       <h1>Calculadora IMC</h1>
+       <h1>Calculadora IMC v.01</h1>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem aliquid neque ad iure atque, magni id delectus praesentium reiciendis consectetur unde incidunt odio, voluptatum repellat, quasi numquam culpa tenetur quisquam!</p>
        <form action="/" id="form" method="POST">
             <label for="peso">Peso</label>
