--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
     
     <section class="container">
        <h1>Calculadora IMC v.01</h1>
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem aliquid neque ad iure atque, magni id delectus praesentium reiciendis consectetur unde incidunt odio, voluptatum repellat, quasi numquam culpa tenetur quisquam!</p>
        <form action="/" id="form" method="POST">
             <label for="peso">Peso</label>
-            <input type="text" id="peso" name="peso">
+            <input type="text" id="peso" name="peso" placeholder="Peso em quilogramas, ex: 80">
 
             <label for="altura">Altura</label>
-            <input type="text" id="altura" name="altura">
+            <input type="text" id="altura" name="altura" placeholder="Altura em metros, ex: 1.93">
             <button type="submit">Enviar</button>
        </form>
        <div id="resultado"></div>
